--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 </head>
 
 <body>
-    <div class="bgPk">
+    <div>
         <h1>Quem é esse Pokemon?</h1>
-        <input type="number" id="campoPK" placeholder="Digite o número de seu Pokemon">
-        <div id="nomPk">Nome</div>
+        <div id="nomPK">Nome</div>
         <div id="idPk">Número</div>
         <img id="imgPk" />
+        <img id="imgPkFemale" />
         <button onclick="carregarPokemon()">Carregar Pokemon</button>
     </div>
     <script src="main.js"></script>
