Consuming API Pokemon

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         <h1>Quem é esse Pokemon?</h1>
         <div id="nomPK">Nome</div>
         <div id="idPk">Número</div>
-        <img id="imgPk" />
-        <img id="imgPkFemale" />
+        <img id="imgPkFront" />
+        <img id="imgPkBack" />
         <button onclick="carregarPokemon()">Carregar Pokemon</button>
     </div>
     <script src="main.js"></script>
